--- a/back_end/.env
+++ b/back_end/.env
@@ -1,6 +1,6 @@
 DATABASE=mongodb+srv://kummarikalyan:kalyan@cluster0.wxbbsop.mongodb.net/SpontomDB?retryWrites=true&w=majority
 PORT=8000
-SECRETKEY=greemmenter
+SECRETKEY=spontom
 PASSWORD=kzcatnayjkluglkh
 SESSION_KEY=Kalyan@123
 HOST=smtp.gmail.com
